--- a/index.html
+++ b/index.html
@@ -1,47 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Results summary component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./assets/styles/styles.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Results summary component</title>
+  </head>
 
-  Your Result
-  76
-  of 100
+  <body>
+    <main>
+      <article class="card">
+        <section class="result-card">
+          <h1 class="result-heading">Your Result</h1>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
+          <figure class="result-figure">
+            <p class="result"><span class="result-number">76</span> of 100</p>
+          </figure>
 
-  Reaction
-  80 / 100
+          <div class="result-feedback-container">
+            <h2 class="result-feedback">Great</h2>
+            <p class="result-description">
+              You scored higher than 65% of the people who have taken these
+              tests.
+            </p>
+          </div>
+        </section>
 
-  Memory
-  92 / 100
+        <section class="summary-card">
+          <h2 class="summary-heading">Summary</h2>
 
-  Verbal
-  61 / 100
+          <div class="summary-details">
+            <div class="summary-detail summary-reaction">
+              <img
+                src="./assets/images/icon-reaction.svg"
+                alt="Reaction Icon"
+              />
+              <p class="summary-name">Reaction</p>
+              <p class="summary-result">
+                <span class="summary-result-number">80</span> / 100
+              </p>
+            </div>
+            <div class="summary-detail summary-memory">
+              <img src="./assets/images/icon-memory.svg" alt="Memory Icon" />
+              <p class="summary-name">Memory</p>
+              <p class="summary-result">
+                <span class="summary-result-number">92</span> / 100
+              </p>
+            </div>
+            <div class="summary-detail summary-verbal">
+              <img src="./assets/images/icon-verbal.svg" alt="Verbal Icon" />
+              <p class="summary-name">Verbal</p>
+              <p class="summary-result">
+                <span class="summary-result-number">61</span> / 100
+              </p>
+            </div>
+            <div class="summary-detail summary-visual">
+              <img src="./assets/images/icon-visual.svg" alt="Visual Icon" />
+              <p class="summary-name">Visual</p>
+              <p class="summary-result">
+                <span class="summary-result-number">72</span> / 100
+              </p>
+            </div>
+          </div>
 
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+          <button class="btn">Continue</button>
+        </section>
+      </article>
+    </main>
+  </body>
 </html>
